--- a/index.html
+++ b/index.html
@@ -8,14 +8,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>vai ser uma imagem aqui</h1>
-         <ul>
-         <li>Escola</li>
-         <li>Estudante</li>
+
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="escolaccm.jpg" alt="">
+         <ul class="cabecalho-lista">
+         <li class="cabecalho-lista-item">Escola</li>
+         <li class="cabecalho-lista-item">Estudante</li>
          </ul>
+
     </header>
+    <section class="escola">
+        <div class="escola-div-conteudo"></div>
+            <h2 class="escola-titulo">sobre a escola</h2>
+            <p class="escola-texto-um">Esta escola virou ccm em 2024 Colegio Civico Militar Joao xxiii</p>
+            <p class="escola-texto-dois">Eu acho isto otimo para impor respeito nos alunos</p>
+            </section>
+            </div>
+     <img class="escola-imagem"
+     src="matematico.png"
+    alt="professor pensando">
+
+
+    </section>
     
 
 </body>
-</html>
+</html> 
